# rss-feed-translator

./: .dockerignore  .gitignore  Dockerfile  README.md  README.zh-CN.md  app.py  pyproject.toml
.github/workflows/: docker-publish.yml
docs/config_translators/: aliyun.md
lib/feed_transformers/: utils.py
lib/translators/: aliyun.py  common.py
templates/: index.html
