[tool.poetry]
name = "rss-feed-translator"
version = "0.1.0"
description = ""
authors = ["colin <Colin_XKL@outlook.com>"]
readme = "README.md"
packages = [{include = "rss_feed_translator"}]

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.3.1"
translatepy = "^2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

