[tool.poetry]
name = "rss-feed-translator"
version = "0.1.0"
description = ""
authors = ["colin <Colin_XKL@outlook.com>"]
readme = "README.md"
packages = [{include = "rss_feed_translator"}]

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.3.2"
translatepy = "^2.3"
xmltodict = "^0.13.0"
alibabacloud-tea-openapi = "^0.3.7"
alibabacloud-alimt20181012 = "^1.1.0"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

